# pythonProject

./: calculator.py  main.py  pyproject.toml
tests/: basic_tests.py
