[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Aminul Chowdhury <aminul.c@covergenius.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

